# particles

./: .gitignore  CMakeLists.txt  README.md
include/: bufwrapper.h  camera.h  drawable.h  mesh.h  misc.h  particle.h  point_cloud.h  shader.h  shapes.h  vertex.h  view_window.h
shader/: adjustable_color.glsl  field.glsl  frag.glsl  geometry.glsl  gravity.glsl  linearconstcoeff.glsl  lorentz.glsl  lorenz.glsl  system.glsl  systemfirstorder.glsl  systemsecondorder.glsl  vertex.glsl
src/: bufwrapper.hpp  camera.cpp  drawable.hpp  main.cpp  mesh.hpp  particle.hpp  point_cloud.hpp  shader.cpp  shapes.cpp  vertex.cpp  view_window.cpp
windows/: opengl-framework.sln  opengl-framework.vcxproj  opengl-framework.vcxproj.filters
